--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             <hr>
         </section>
 
-        <div>
+        <figure>
             <img  src="images/1200px-Bandera_de_Chile(2).jpg" alt="chile flag" class="left-image-flag">
-        </div>
+            <figcaption>Official Flag of Chile</figcaption>
+        </figure>
         
         <div>
             <p class="left-paragraph-chile">Chile is a long, narrow country in South America, bordered by the Pacific Ocean and Andes Mountains. Known for its diverse landscapes, it ranges from the Atacama Desert to Patagonia’s glaciers. Its economy thrives on copper mining, agriculture, and wine production. Santiago is the bustling capital and cultural center.</p>
