--- a/temples.html
+++ b/temples.html
@@ -73,8 +73,8 @@
     </main>
       
       <footer>
-        <p class="main">© <span id="currentyear">2025</span> 💻 Gino Rojo 💻 Chile</p>
-        <p id="lastModified">Last Modified: 01/24/2025 12:08:43</p>
+        <p class="main">© <span id="currentyear"></span> 💻 Gino Rojo 💻 Chile</p>
+        <p id="lastModified"></p>
     </footer>
 
 </body></html>
