--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <h1>Temple Album</h1>
-        <a href="https://ginorojo.github.io/wdd131/filtered-temples.html" id="hambutton"></a>
+        <a href="https://ginorojo.github.io/wdd131/filtered-temples.html#" id="hambutton"></a>
         <nav id="navigation">
             <a href="https://ginorojo.github.io/wdd131/filtered-temples.html#" id="home">Home</a>
             <a href="https://ginorojo.github.io/wdd131/filtered-temples.html#" id="old">Old</a>
