--- a/proyect/index.html
+++ b/proyect/index.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant</title>
-    <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Arima:wght@700&family=Mulish&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="">
-</head>
-<body>
-   <header class="heading">
-    <div class="container-navegation">
+    <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+  </head>
+  <body>
+    <header class="heading">
+      <div class="container-navegation">
         <div class="content-navegation container">
-            <div class="logo">
-                <h2><span class="red">Restaurant</span> <span class="white">Hungry</span> <span class="red">Appe</span></h2>
-            </div>
-            <nav class="navegation hide">
-                <a href="#">Inicio</a>
-                <a href="#">menu</a>
-                <a href="#">chef</a>
-                <a href="#">contacto</a>
-            </nav>
-            <div class="hamburger">
-                <span></span><span></span><span></span>
-
-            </div>
-
+          <div class="logo">
+            <h2>
+            <span class="logo-appe"><img src="images/logo appe.webp" alt=""></span>
+            <span class="white">Hungry</span> <span class="red">Appe</span>
+            </h2>
+          </div>
+          <nav class="navegation hide">
+            <a href="#">Inicio</a>
+            <a href="#">menu</a>
+            <a href="#">chef</a>
+            <a href="#">contacto</a>
+          </nav>
+          <div class="hamburger"><span></span><span></span><span></span></div>
         </div>
-    <div class="content-header">
-        <div class="container-header">
+        <div class="content-header">
+          <div class="container-header">
             <div class="text-header">
-                <h2>Bienvenido</h2>
-                <a href="#" class="btn border">Nuestro menu</a>
+              <h2>Bienvenido</h2>
+              <a href="#" class="btn border">Nuestra carta</a>
             </div>
             <figure>
-                <img src="images/nueva-foto-peru.webp">
+              <img src="images/nueva-foto-peru.webp" />
             </figure>
+          </div>
         </div>
+      </div>
+    </header>
+    <div class="container-us">
+      <div class="text-us">
+        <p class="welcome">Bienvenido a</p>
+        <h1>Hungry Appe <span class="logo-appe"><img src="images/logo appe white.webp" alt=""></span></h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+          exercitationem odio aspernatur harum tenetur est velit laboriosam eos
+          quasi veritatis, error dignissimos? Laboriosam eius placeat recusandae
+          aut sint unde ab! Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Ducimus esse excepturi quidem. Dolor nobis, in minima facilis,
+          tenetur commodi sint tempora excepturi exercitationem enim
+          reprehenderit corporis quaerat iure earum error.
+        </p>
+        <a href="#" class="btn btn-red" target="_blank">Ordena aqui <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg></a>
+           
+      </div>
+      <div class="image-us">
+        <div class="image1">
+          <img src="images/nosotros1.webp" alt="" />
+        </div>
+        <div class="image2">
+          <img src="images/nosotros2.webp" alt="" />
+          <img src="images/nosotros3.webp" alt="" />
+        </div>
+      </div>
     </div>
-
-    </div>
-   </header>
-   <script src="scrypts/app.js"></script>
-    
-</body>
+    <script src="scrypts/app.js"></script>
+  </body>
 </html>
