--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
     </header>
     <main>
         <h1>Product Review</h1>
-        <form method="get" action="review.html#">
+        <form method="get" action="https://ginorojo.github.io/wdd131/review.html#"
             <div class="products">
                 <label for="product">Product Name: </label>
                 <select id="product" name="product" required="">
