--- a/review.html
+++ b/review.html
@@ -17,7 +17,7 @@
         <h1>Form<span id="title"></span></h1>
     </header>
     <main>
-        <h1>Reviews: <span id="counter">0></span></h1>
+        <h1>Reviews: <span id="counter">0</span></h1>
         <p>Thank you for your review!</p>
     </main>
     
