--- a/project/index.html
+++ b/project/index.html
@@ -39,7 +39,7 @@
               <a href="#" class="btn border">Nuestra carta</a>
             </div>
             <figure>
-              <img src="images/restaurant2.webp" data-src="images/restaurant2.webp" alt="logo-ape">
+              <img src="images/restaurant2.webp" data-src="images/restaurant2.webp" alt="logo-ape" loading="lazy">
             </figure>
           </div>
         </div>
@@ -65,10 +65,10 @@
       </div>
       <div class="image-us">
         <div class="image1">
-          <img src="images/lomo.webp" data-src="images/lomo.webp" alt="lomo">
+          <img src="images/lomo.webp" data-src="images/lomo.webp" alt="lomo" loading="lazy">
         </div>
         <div class="image2">
-          <img src="images/fetuchini.webp" data-src="images/fetuchini.webp" alt="fetuchini">
+          <img src="images/fetuchini.webp" data-src="images/fetuchini.webp" alt="fetuchini" loading="lazy">
         </div>
       </div>
     </div>
@@ -102,7 +102,7 @@
           </p>
         </div>
         <div class="image-chef">
-          <img src="images/chef.webp" data-src="images/chef.webp" alt="chef">
+          <img src="images/chef.webp" data-src="images/chef.webp" alt="chef" loading="lazy">
         </div>
       </div>
     </section>
