--- a/project/index.html
+++ b/project/index.html
@@ -51,7 +51,7 @@
         <h1>
           Hungry Appe
           <span class="logo-appe">
-            <img src="images/logo_appe.webp" data-src="images/logo_appe.webp" alt="logo-ape">
+            <img src="images/logo_appe_white.webp" data-src="images/logo_appe_white.webp" alt="logo-ape">
           </span>
         </h1>
         <p lang="es">
