--- a/project/index.html
+++ b/project/index.html
@@ -6,6 +6,7 @@
     <title>Restaurant</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <script src="https://kit.fontawesome.com/283335a286.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
@@ -77,7 +78,7 @@
       <div class="content-separator">
         <h2 lang="es">Comida peruana para empezar el dia</h2>
         <p lang="es">Comienza tu dia comiendo deliciosa comida peruana</p>
-        <a href="#" class="btn btn-green" target="_blank">Ordena aqui</a>
+        <a href="https://wa.me/56954630290" class="btn btn-green" target="_blank">Ordena aqui</a>
       </div>
     </div>
 
@@ -113,7 +114,7 @@
         <div class="location text-chef">
           <h3>Puedes encontrarnos en:</h3>
           <p>
-            <i class="fa-solid fa-location-dot"></i> Calle la Araucania 5362, la
+            <i class="fas fa-map-marker-alt"></i> Calle la Araucania 5362, la
             Florida, La Serena.
           </p>
         </div>
@@ -136,7 +137,7 @@
         <p><i class="fas fa-map-marker-alt"></i> Calle la Araucania 5362</p>
         <p><i class="fas fa-envelope"></i> hungryape@gmail.com</p>
         <p><i class="fas fa-phone-alt"></i>+56971874099</p>
-        <div class="social-media">
+      <div class="social-media">
           <i class="fab fa-facebook-square"></i>
           <i class="fab fa-twitter-square"></i>
           <i class="fab fa-instagram"></i>
