--- a/project/index.html
+++ b/project/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurant</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Restaurant Hungry Ape</title>
+    <meta name="description" content="WDD 131 - Dynamic web fundamentals - Gino Rojo - Hungry Ape Restaurant, the best Peruvian Restaurant of the city" >
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
     <script src="https://kit.fontawesome.com/283335a286.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap"
